# final759

./: README.md  game.py  solver.py
cpp/: CMakeLists.txt  cuda.err  cuda.out  game.hpp  main.cpp  main_cuda.cpp  openmp.out  run_cuda.sh  run_openmp.sh  run_sequential.sh  run_sequential_1.sh  run_sequential_2.sh  sequential_1.out  sequential_2.out  solver.cpp  solver_cuda.cu  solver_cuda.cuh
cuda/: CMakeLists.txt  cuda.out  run_cuda.sh  solver.cpp  solver.hpp  solver_cuda.cu
python/: main.py  requirements.txt
